基本全部完成，加了线程控制控件，关闭时候关闭线程再关闭服务

--- a/app/src/main/res/layout/dialogfragment_record.xml
+++ b/app/src/main/res/layout/dialogfragment_record.xml
@@ -9,8 +9,7 @@
     card_view:cardElevation="3dp"
     android:transitionName="open_mediaplayer"
     android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    >
+    android:layout_centerHorizontal="true">
 
     <RelativeLayout
         android:layout_width="fill_parent"
